<resources>
    <string name="app_name">Banco de leche materna</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cerrar sesión</string>

    <string name="menu_home">Consultar</string>
    <string name="menu_gallery">Modificar</string>
    <string name="menu_slideshow">Ingresar</string>
    <string name="fondo">fondo</string>
    <string name="logo">logo</string>
    <string name="correo">Correo electrónico</string>
    <string name="contra">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="olvidar">¿Ha olvidado su contraseña?</string>
    <string name="crear">Crear cuenta</string>
    <string name="crear2">¿Aún no tiene una cuenta?</string>
    <string name="crear3">Crea tu propio usuario</string>
    <string name="nombre">Nombre</string>
    <string name="crear_usuario">Crear usuario</string>
    <string name="cuenta">¿Ya tienes una cuenta?</string>
    <string name="consultar">Consultar</string>
    <string name="modificar">Modificar</string>
    <string name="ingresar">Ingresar</string>
    <string name="titulo">Banco de leche materna</string>
    <string name="modificar2">Modifique la información</string>
    <string name="numero_documento">Número de documento</string>
    <string name="tipo_documento">Tipo de documento</string>
    <string name="direccion">Dirección</string>
    <string name="ciudad">Ciudad</string>
    <string name="celular">Celular</string>
    <string name="fecha_nacimiento">Fecha de nacimiento</string>
    <string name="peso">Peso</string>
    <string name="talla">Talla</string>
    <string name="imc">IMC</string>
    <string name="medicamentos">¿Usa medicamentos?</string>
    <string name="habitos">¿Hábitos tóxicos?</string>
    <string name="ultima_regla">Fecha de última regla</string>
    <string name="fecha_parto">Fecha de parto</string>
    <string name="edad_amenorrea">Edad de amenorrea</string>
    <string name="patologia">¿Patología durante el embarazo?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="cual">¿Cual?</string>
    <string name="agregar">Agregar</string>
    <string name="ingresar_nuevo">Ingresar nuevo</string>
    <string name="guardar">Guardar</string>
    <string name="modificar_nuevo">Modificar nuevo</string>
    <string name="consultar_nuevo">Consultar nuevo</string>
    <string name="buscar">Buscar documento</string>
    <string name="Bienvenido">welcome</string>
    <string name="welcome">Bienvenido</string>
</resources>