<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="7"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            tools:ignore="NestedWeights,UselessParent">

            <ImageView
                android:id="@+id/imgFondo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/fondo"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/fondoapp"
                tools:ignore="ImageContrastCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgLogo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/logo"
                    app:srcCompat="@drawable/logoapp"
                    tools:ignore="ImageContrastCheck" />
            </LinearLayout>
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="731dp"
        android:layout_weight="6.85"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="275dp"
            android:orientation="vertical"
            android:padding="12dp"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/lblUsuario"
                android:layout_width="384dp"
                android:layout_height="wrap_content"
                android:baselineAligned="true"
                android:padding="0dp"
                android:paddingLeft="20dp"
                android:paddingEnd="40dp"
                android:paddingRight="20dp"
                android:shadowColor="#03A9F4"
                android:text="Ingrese su usuario"
                android:textAlignment="center"
                android:textColor="#03A9F4"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry,TextContrastCheck" />

            <EditText
                android:id="@+id/txtCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/correo"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:padding="15dp"
                tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />


            <EditText
                android:id="@+id/txtContraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/contra"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="15dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/btnIniciarSesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="#03A9F4"
                android:onClick="Pantalla1"
                android:padding="15dp"
                android:text="@string/login"
                app:iconTint="#D18F1C"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/lblOlvidar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:shadowColor="#03A9F4"
                android:text="@string/olvidar"
                android:textAlignment="center"
                android:textColor="#03A9F4"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="7"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="#03A9F4"
            android:orientation="horizontal"
            android:paddingTop="15dp">

        </LinearLayout>

        <TextView
            android:id="@+id/lblCuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:shadowColor="#03A9F4"
            android:text="@string/crear2"
            android:textAlignment="center"
            android:textColor="#03A9F4"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="0dp">

            <Button
                android:id="@+id/btnCrear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="#03A9F4"
                android:onClick="Pantalla2"
                android:padding="15dp"
                android:text="@string/crear"
                app:iconTint="#D18F1C"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>