<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/textview6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp"
    android:paddingTop="0dp"
    tools:context=".CrearActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        tools:ignore="ScrollViewCount,UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_weight="4"
                tools:ignore="InefficientWeight,NestedWeights,UselessParent">

                <ImageView
                    android:id="@+id/imgFondo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/fondo"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/fondoapp"
                    tools:ignore="ImageContrastCheck" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgLogo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/logo"
                        app:srcCompat="@drawable/logoapp"
                        tools:ignore="ImageContrastCheck" />
                </LinearLayout>
            </FrameLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="516dp"
                    android:orientation="vertical"
                    android:padding="12dp"
                    tools:ignore="UselessParent">


                    <TextView
                        android:id="@+id/lblUsuario"
                        android:layout_width="384dp"
                        android:layout_height="wrap_content"
                        android:baselineAligned="true"
                        android:padding="0dp"
                        android:paddingLeft="20dp"
                        android:paddingEnd="40dp"
                        android:paddingRight="20dp"
                        android:shadowColor="#03A9F4"
                        android:text="@string/crear3"
                        android:textAlignment="center"
                        android:textColor="#03A9F4"
                        android:textSize="20sp"
                        tools:ignore="RtlSymmetry,TextContrastCheck" />

                    <TextView
                        android:id="@+id/lblNombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="15dp"
                        android:paddingTop="20dp"
                        android:shadowColor="#03A9F4"
                        android:text="@string/nombre"
                        android:textColor="#03A9F4"
                        android:textSize="18sp"
                        tools:ignore="RtlSymmetry,TextContrastCheck" />

                    <EditText
                        android:id="@+id/txtNombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:minHeight="48dp"
                        android:paddingStart="10dp"
                        android:textColor="#000000"
                        tools:ignore="LabelFor,RtlSymmetry,SpeakableTextPresentCheck" />

                    <TextView
                        android:id="@+id/lblCorreo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="15dp"
                        android:paddingTop="10dp"
                        android:shadowColor="#03A9F4"
                        android:text="@string/correo"
                        android:textColor="#03A9F4"
                        android:textSize="18sp"
                        tools:ignore="RtlSymmetry,TextContrastCheck" />

                    <EditText
                        android:id="@+id/txtCorreo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:inputType="textEmailAddress"
                        android:minHeight="48dp"
                        android:padding="10dp"
                        tools:ignore="LabelFor,SpeakableTextPresentCheck,TextContrastCheck" />

                    <TextView
                        android:id="@+id/lblContraseña"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="15dp"
                        android:paddingTop="20dp"
                        android:shadowColor="#03A9F4"
                        android:text="@string/contra"
                        android:textColor="#03A9F4"
                        android:textSize="18sp"
                        tools:ignore="RtlSymmetry,TextContrastCheck" />

                    <EditText
                        android:id="@+id/txtContraseña"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:inputType="textPassword"
                        android:minHeight="48dp"
                        android:padding="10dp"
                        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

                    <Button
                        android:id="@+id/btnCrear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:backgroundTint="#03A9F4"
                        android:padding="15dp"
                        android:text="@string/crear_usuario"
                        app:iconTint="#D18F1C"
                        tools:ignore="TextContrastCheck" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="13"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:layout_marginLeft="50dp"
                            android:layout_marginRight="50dp"
                            android:background="#03A9F4"
                            android:orientation="horizontal">

                        </LinearLayout>

                        <TextView
                            android:id="@+id/lblCuenta"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:shadowColor="#03A9F4"
                            android:text="@string/cuenta"
                            android:textAlignment="center"
                            android:textColor="#03A9F4"
                            tools:ignore="TextContrastCheck" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:padding="0dp">

                            <Button
                                android:id="@+id/btnIniciarSesion"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:backgroundTint="#03A9F4"
                                android:onClick="Pantalla2"
                                android:padding="15dp"
                                android:text="@string/login"
                                app:iconTint="#D18F1C"
                                tools:ignore="TextContrastCheck" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>